# libglesv2-stub

./: LICENSE  meson.build
src/: meson.build
